# OpenGLProject-WIP

./: CMakeLists.txt  ImGuiThing.cpp  ImGuiThing.hpp  Render2DManager.cpp  Render2DManager.hpp  Utils.cpp  Utils.hpp  UtilsMain.hpp  glad.c  main.cpp
IO/: Camera.cpp  Camera.hpp  Mouse.cpp  Mouse.hpp  Window.cpp  Window.hpp
Render/: Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Rectangle.cpp  Rectangle.hpp  Shader.cpp  Shader.hpp  UISystem.cpp  UISystem.hpp  shader.frag  shader.vert
images/2dcircle/: 2dcircle.mtl
images/nahobino/: smt_v_protagonist_nahobino_ver_dl_rip__blend_by_emilyblend34_deuihsp.mtl
images/slime/: simpleslime.mtl
